--- a/Bhavya_AllExercises/Bhavya_AllExercises.csproj
+++ b/Bhavya_AllExercises/Bhavya_AllExercises.csproj
@@ -169,6 +169,7 @@
     <Content Include="Views\Bhavya\ExFour.cshtml" />
     <Content Include="Views\Bhavya\ExFive.cshtml" />
     <Content Include="Views\Bhavya\ExSix.cshtml" />
+    <Content Include="Views\Bhavya\ExSeven.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
